Add placeholder payment request
